home page adjusted, products section in progress

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <nav>
           <ul>
             <li>
-              <a href="">Home</a>
+              <a href="" style="color: #4d4545">Home</a>
             </li>
             <li>
-              <a href="">About</a>
+              <a href="" style="color: #4d4545">About</a>
             </li>
             <li>
-              <a href="">Products</a>
+              <a href="" style="color: #4d4545">Products</a>
             </li>
           </ul>
         </nav>
@@ -40,19 +40,211 @@
       </div>
 
       <div class="main__content">
-        <div class="row home__container">
-          <div class="col-md-6 home-text">
-            <h1>Placeholder Title</h1>
+        <div class="home__container">
+          <div class="home-text">
+            <h1>Get the Glow</h1>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Praesentium id perspiciatis facere repellat, repellendus iusto
-              exercitationem necessitatibus dolorum dolor dolore consequuntur
-              omnis? Sit ipsa voluptate pariatur odio, laudantium provident cum?
+              exercitationem.
             </p>
           </div>
 
-          <div class="col-md-3 home-img">
+          <div class="home-img">
             <img src="/images/model/skin-web1.jpg" alt="model" />
+          </div>
+        </div>
+      </div>
+
+      <div class="shop-title" style="padding-top: 80px; padding-left: 50px">
+        <h3>SHOP PRODUCTS</h3>
+      </div>
+
+      <div class="shop__products">
+        <div class="container-xl">
+          <div class="row">
+            <div class="col-md-10 mx-auto">
+              <div
+                id="myCarousel"
+                class="carousel slide"
+                data-ride="carousel"
+                data-interval="0"
+              >
+                <!-- Carousel indicators -->
+                <!-- <ol class="carousel-indicators">
+                  <li
+                    data-target="#myCarousel"
+                    data-slide-to="0"
+                    class="active"
+                  ></li>
+                  <li data-target="#myCarousel" data-slide-to="1"></li>
+                  <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol> -->
+                <!-- Wrapper for carousel items -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="row">
+                      <div class="col-sm-4">
+                        <div class="thumb-wrapper">
+                          <div class="img-box">
+                            <img
+                              src="/images/products/skin-web2.jpg"
+                              class="img-fluid"
+                              alt=""
+                            />
+                          </div>
+                          <div class="thumb-content">
+                            <h4 style="font-family: Poppins, sans-serif">
+                              Lip Scrub
+                            </h4>
+                            <p style="font-family: Poppins, sans-serif">
+                              from $5.99
+                            </p>
+                            <a href="#" class="btn btn-primary"
+                              >SHOP <i class="fa fa-angle-right"></i
+                            ></a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-sm-4">
+                        <div class="thumb-wrapper">
+                          <div class="img-box">
+                            <img
+                              src="/images/products/skin-web4.jpg"
+                              class="img-fluid"
+                              alt=""
+                            />
+                          </div>
+                          <div class="thumb-content">
+                            <h4 style="font-family: Poppins, sans-serif">
+                              Hydrating Serum
+                            </h4>
+                            <p style="font-family: Poppins, sans-serif">
+                              from $11.99
+                            </p>
+                            <a href="#" class="btn btn-primary"
+                              >SHOP <i class="fa fa-angle-right"></i
+                            ></a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-sm-4">
+                        <div class="thumb-wrapper">
+                          <div class="img-box">
+                            <img
+                              src="/images/products/skin-web7.png"
+                              class="img-fluid"
+                              alt=""
+                            />
+                          </div>
+                          <div class="thumb-content">
+                            <h4 style="font-family: Poppins, sans-serif">
+                              Body Butter
+                            </h4>
+                            <p style="font-family: Poppins, sans-serif">
+                              from $15.99
+                            </p>
+                            <a href="#" class="btn btn-primary"
+                              >SHOP <i class="fa fa-angle-right"></i
+                            ></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="row">
+                      <div class="col-sm-4">
+                        <div class="thumb-wrapper">
+                          <div class="img-box">
+                            <img
+                              src="/examples/images/cities/kuala-lumpur.png"
+                              class="img-fluid"
+                              alt=""
+                            />
+                          </div>
+                          <div class="thumb-content">
+                            <h4>Kuala Lumpur</h4>
+                            <p>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing
+                              elit. Nam eu sem tempor, varius quam.
+                            </p>
+                            <a href="#" class="btn btn-primary"
+                              >More <i class="fa fa-angle-right"></i
+                            ></a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-sm-4">
+                        <div class="thumb-wrapper">
+                          <div class="img-box">
+                            <img
+                              src="/examples/images/cities/agra.png"
+                              class="img-fluid"
+                              alt=""
+                            />
+                          </div>
+                          <div class="thumb-content">
+                            <h4>Agra</h4>
+                            <p>
+                              Vivamus fermentum in arcu in aliquam. Quisque
+                              aliqua porta odio in fringilla vivamus.
+                            </p>
+                            <a href="#" class="btn btn-primary"
+                              >More <i class="fa fa-angle-right"></i
+                            ></a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-sm-4">
+                        <div class="thumb-wrapper">
+                          <div class="img-box">
+                            <img
+                              src="/examples/images/cities/dubai.png"
+                              class="img-fluid"
+                              alt=""
+                            />
+                          </div>
+                          <div class="thumb-content">
+                            <h4>Dubai</h4>
+                            <p>
+                              Convallis eget pretium eu, bibendum non leo. Proin
+                              susc ipit purus adipiscing dolor.
+                            </p>
+                            <a href="#" class="btn btn-primary"
+                              >More <i class="fa fa-angle-right"></i
+                            ></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Carousel controls -->
+                <a
+                  class="carousel-control-prev"
+                  href="#myCarousel"
+                  data-slide="prev"
+                >
+                  <!-- <i class="fa fa-angle-left"></i> -->
+                  <img
+                    src="/images/logos/left.png"
+                    style="width: 50px; margin-right: 70px"
+                  />
+                </a>
+                <a
+                  class="carousel-control-next"
+                  href="#myCarousel"
+                  data-slide="next"
+                >
+                  <!-- <i class="fa fa-angle-right"></i> -->
+                  <img
+                    src="/images/logos/arrow-right.png"
+                    style="width: 50px; margin-left: 70px"
+                  />
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
