--- a/index.html
+++ b/index.html
@@ -248,8 +248,44 @@
           </div>
         </div>
       </div>
-    </div>
 
+      <!-- FOOTER -->
+      <footer
+        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
+      >
+        <p class="col-md-4 mb-0 text-muted">&copy; 2021 Company, Inc</p>
+
+        <a
+          href="/"
+          class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"
+        >
+          <!-- <svg class="bi me-2" width="40" height="32">
+            <use xlink:href="#bootstrap" />
+          </svg> -->
+          <img
+            src="/images/logos/mak-logo.png"
+            alt="logo"
+            style="width: 200px"
+          />
+        </a>
+
+        <ul class="nav col-md-4 justify-content-end">
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-muted">FAQ</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-muted">CONTACT US</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-muted">TERMS & CONDITIONS</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-muted">PRIVACY POLICY</a>
+          </li>
+        </ul>
+      </footer>
+      <!-- END FOOTER -->
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
