--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
           </a>
           <ul class="nav-menu">
             <li>
-              <a class="active nav-links" href="#">HOME</a>
+              <a class="active nav-links" href="index.html">HOME</a>
             </li>
             <li>
-              <a class="nav-links" href="#">PRODUCTS</a>
+              <a class="nav-links" href="products.html">PRODUCTS</a>
             </li>
             <li>
-              <a class="nav-links" href="#">ABOUT</a>
+              <a class="nav-links" href="about.html">ABOUT</a>
             </li>
             <li>
-              <a class="nav-links" href="#">CONTACT</a>
+              <a class="nav-links" href="contact.html">CONTACT</a>
             </li>
           </ul>
         </nav>
