products page set up and responsive

--- a/products.html
+++ b/products.html
@@ -48,6 +48,74 @@
           </ul>
         </nav>
       </div>
+
+      <div class="product-slider">
+        <div class="carousel slide shop-carousel" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row product-row">
+                <div class="col-lg-4">
+                  <img src="images/products/skin-web5.jpg" alt="1 slide" />
+                  <div class="thumb-content">
+                    <h4 style="font-family: Poppins, sans-serif">
+                      PINK GLOW SET
+                    </h4>
+                    <p style="font-family: Poppins, sans-serif">
+                      Natural ingredients for healthy, smooth and even-toned
+                      skin.
+                    </p>
+                    <a href="#" class="btn btn-light">ADD TO BAG - $19.99</a>
+                  </div>
+                </div>
+                <div class="col-lg-4">
+                  <img src="images/products/skin-web3.jpg" alt="2 slide" />
+                  <div class="thumb-content">
+                    <h4 style="font-family: Poppins, sans-serif">
+                      CLARIFYING SERUM
+                    </h4>
+                    <p style="font-family: Poppins, sans-serif">
+                      Natural ingredients for healthy, smooth and even-toned
+                      skin.
+                    </p>
+                    <a href="#" class="btn btn-light"> ADD TO BAG - $12.95</a>
+                  </div>
+                </div>
+                <div class="col-lg-4">
+                  <img src="images/products/skin-web2.jpg" alt="3 slide" />
+                  <div class="thumb-content">
+                    <h4 style="font-family: Poppins, sans-serif">LIP SCRUB</h4>
+                    <p style="font-family: Poppins, sans-serif">
+                      Natural ingredients for healthy, smooth and even-toned
+                      skin.
+                    </p>
+                    <a href="#" class="btn btn-light">ADD TO BAG - $5.99</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <a
+            class="carousel-control-prev arrows"
+            href="#myCarousel"
+            data-slide="prev"
+          >
+            <img
+              src="/images/logos/left-chevron.png"
+              style="width: 50px; margin-right: 70px"
+            />
+          </a>
+          <a
+            class="carousel-control-next arrows"
+            href="#myCarousel"
+            data-slide="next"
+          >
+            <img
+              src="/images/logos/chevron.png"
+              style="width: 50px; margin-left: 70px"
+            />
+          </a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
