all pages have been arranged

--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
     <!-- Custom CSS -->
     <link href="a-style.css" rel="stylesheet" />
 
+    <!-- aos css -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link
@@ -48,6 +51,71 @@
           </ul>
         </nav>
       </div>
+
+      <!-- <div class="about-content">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="images/model/pexels-sora-shimazaki-5938592.jpg"
+              alt="Model"
+              style="width: 360px; border-radius: 10px"
+            />
+          </div>
+          <div class="col-md-6 about__text-container">
+            <img
+              src="images/about-page/ABOUT-SECTION.png"
+              alt="about-text"
+              style="width: 861px; padding: 0 0 30px 85px"
+            />
+            <div class="text-ab">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+              totam beatae nesciunt facere dignissimos reiciendis perferendis
+              doloremque maxime qui saepe? Incidunt odit iusto sequi sapiente
+              eos commodi, debitis quibusdam! Perspiciatis!
+            </div>
+          </div>
+        </div>
+      </div> -->
+
+      <div
+        class="home__container row"
+        data-aos="fade-left"
+        data-aos-duration="2000"
+      >
+        <div class="home-text child col-md-6">
+          <img
+            src="images/model/pexels-sora-shimazaki-5938592.jpg"
+            alt="Model"
+            style="width: 360px; border-radius: 10px"
+          />
+        </div>
+
+        <div class="home-img child col-md-6">
+          <img
+            id="skin-img"
+            src="images/about-page/ABOUT-SECTION.png"
+            alt="model"
+          />
+        </div>
+      </div>
+
+      <div class="social-media">
+        <a href="#" style="text-decoration: none; padding-right: 10px"
+          ><img src="images/logos/instagram.png" style="width: 30px" />
+        </a>
+        <a href="#" style="text-decoration: none; padding-right: 10px"
+          ><img src="images/logos/facebook.png" style="width: 30px" />
+        </a>
+        <a href="#" style="text-decoration: none"
+          ><img src="images/logos/pinterest-logo.png" style="width: 30px" />
+        </a>
+      </div>
     </div>
+    <!--SCRIPT-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <!--SCRIPT-->
   </body>
 </html>
