--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,9 @@
     <!-- Custom CSS -->
     <link href="c-style.css" rel="stylesheet" />
 
+    <!-- aos css -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link
@@ -48,6 +51,107 @@
           </ul>
         </nav>
       </div>
+
+      <div
+        class="container contact-form"
+        data-aos="fade-up"
+        data-aos-duration="1000"
+      >
+        <form method="post">
+          <div class="row">
+            <div class="col-md-6 contact-title">
+              <h3>Contact Us</h3>
+              <div class="contact-info">
+                <h4>customercare@makkiskin.com</h4>
+                <h4>123-456-7890</h4>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <input
+                  type="text"
+                  name="txtName"
+                  class="form-control"
+                  placeholder="Name"
+                  value=""
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  name="txtEmail"
+                  class="form-control"
+                  placeholder="Email"
+                  value=""
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  name="txtPhone"
+                  class="form-control"
+                  placeholder="Phone Number"
+                  value=""
+                />
+              </div>
+              <div class="">
+                <div class="form-group">
+                  <textarea
+                    name="txtMsg"
+                    class="form-control"
+                    placeholder="Message"
+                    style="width: 100%; height: 150px"
+                  ></textarea>
+                </div>
+              </div>
+              <div class="form-group">
+                <input
+                  type="submit"
+                  name="btnSubmit"
+                  class="btnContact"
+                  value="Send"
+                />
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
+    <!-- FOOTER -->
+    <footer
+      class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
+    >
+      <p class="col-md-4 mb-0 text-muted">&copy; 2021 Company, Inc</p>
+
+      <a
+        href="/"
+        class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"
+      >
+        <img src="/images/logos/mak-logo.png" alt="logo" style="width: 200px" />
+      </a>
+
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item">
+          <a href="#" class="nav-link px-2 text-muted">FAQ</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link px-2 text-muted">CONTACT US</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link px-2 text-muted">TERMS & CONDITIONS</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link px-2 text-muted">PRIVACY POLICY</a>
+        </li>
+      </ul>
+    </footer>
+    <!-- END FOOTER -->
+
+    <!--SCRIPT-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <!--SCRIPT-->
   </body>
 </html>
