--- a/about.html
+++ b/about.html
@@ -27,13 +27,13 @@
       <div class="nav-container">
         <nav>
           <a class="logo" id="mobile-menu" href="#">
-            <img src="/images/logos/mak-logo.png" alt="logo" />
+            <img src="images/logos/mak-logo.png" alt="logo" />
           </a>
           <a class="cart" href="#">
-            <img src="/images/logos/shopping-bag.png" alt="cart" />
+            <img src="images/logos/shopping-bag.png" alt="cart" />
           </a>
           <a class="menu" href="#">
-            <img src="/images/logos/menu.png" alt="menu" />
+            <img src="images/logos/menu.png" alt="menu" />
           </a>
           <ul class="nav-menu">
             <li>
@@ -51,31 +51,6 @@
           </ul>
         </nav>
       </div>
-
-      <!-- <div class="about-content">
-        <div class="row">
-          <div class="col-md-6">
-            <img
-              src="images/model/pexels-sora-shimazaki-5938592.jpg"
-              alt="Model"
-              style="width: 360px; border-radius: 10px"
-            />
-          </div>
-          <div class="col-md-6 about__text-container">
-            <img
-              src="images/about-page/ABOUT-SECTION.png"
-              alt="about-text"
-              style="width: 861px; padding: 0 0 30px 85px"
-            />
-            <div class="text-ab">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-              totam beatae nesciunt facere dignissimos reiciendis perferendis
-              doloremque maxime qui saepe? Incidunt odit iusto sequi sapiente
-              eos commodi, debitis quibusdam! Perspiciatis!
-            </div>
-          </div>
-        </div>
-      </div> -->
 
       <div
         class="home__container row"
