--- a/contact.html
+++ b/contact.html
@@ -27,13 +27,13 @@
       <div class="nav-container">
         <nav>
           <a class="logo" id="mobile-menu" href="#">
-            <img src="/images/logos/mak-logo.png" alt="logo" />
+            <img src="images/logos/mak-logo.png" alt="logo" />
           </a>
           <a class="cart" href="#">
-            <img src="/images/logos/shopping-bag.png" alt="cart" />
+            <img src="images/logos/shopping-bag.png" alt="cart" />
           </a>
           <a class="menu" href="#">
-            <img src="/images/logos/menu.png" alt="menu" />
+            <img src="images/logos/menu.png" alt="menu" />
           </a>
           <ul class="nav-menu">
             <li>
@@ -127,7 +127,7 @@
         href="/"
         class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"
       >
-        <img src="/images/logos/mak-logo.png" alt="logo" style="width: 200px" />
+        <img src="images/logos/mak-logo.png" alt="logo" style="width: 200px" />
       </a>
 
       <ul class="nav col-md-4 justify-content-end">
