--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <div class="nav-container">
         <nav>
           <a class="logo" id="mobile-menu" href="#">
-            <img src="/images/logos/mak-logo.png" alt="logo" />
+            <img src="images/logos/mak-logo.png" alt="logo" />
           </a>
           <a class="cart" href="#">
-            <img src="/images/logos/shopping-bag.png" alt="cart" />
+            <img src="images/logos/shopping-bag.png" alt="cart" />
           </a>
           <a class="menu" href="#">
-            <img src="/images/logos/menu.png" alt="menu" />
+            <img src="images/logos/menu.png" alt="menu" />
           </a>
           <ul class="nav-menu">
             <li>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="home-img child col-md-6">
-          <img id="skin-img" src="/images/model/skin-web1.png" alt="model" />
+          <img id="skin-img" src="images/model/skin-web1.png" alt="model" />
         </div>
       </div>
 
@@ -87,7 +87,7 @@
                         <div class="thumb-wrapper">
                           <div class="img-box">
                             <img
-                              src="/images/products/skin-web2.jpg"
+                              src="images/products/skin-web2.jpg"
                               class="img-fluid"
                               alt=""
                             />
@@ -109,7 +109,7 @@
                         <div class="thumb-wrapper">
                           <div class="img-box">
                             <img
-                              src="/images/products/skin-web4.jpg"
+                              src="images/products/skin-web4.jpg"
                               class="img-fluid"
                               alt=""
                             />
@@ -131,7 +131,7 @@
                         <div class="thumb-wrapper">
                           <div class="img-box">
                             <img
-                              src="/images/products/skin-web7.png"
+                              src="images/products/skin-web7.png"
                               class="img-fluid"
                               alt=""
                             />
@@ -157,7 +157,7 @@
                         <div class="thumb-wrapper">
                           <div class="img-box">
                             <img
-                              src="/examples/images/cities/kuala-lumpur.png"
+                              src="examples/images/cities/kuala-lumpur.png"
                               class="img-fluid"
                               alt=""
                             />
@@ -178,7 +178,7 @@
                         <div class="thumb-wrapper">
                           <div class="img-box">
                             <img
-                              src="/examples/images/cities/agra.png"
+                              src="examples/images/cities/agra.png"
                               class="img-fluid"
                               alt=""
                             />
@@ -188,27 +188,6 @@
                             <p>
                               Vivamus fermentum in arcu in aliquam. Quisque
                               aliqua porta odio in fringilla vivamus.
-                            </p>
-                            <a href="#" class="btn btn-primary"
-                              >More <i class="fa fa-angle-right"></i
-                            ></a>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-sm-4">
-                        <div class="thumb-wrapper">
-                          <div class="img-box">
-                            <img
-                              src="/examples/images/cities/dubai.png"
-                              class="img-fluid"
-                              alt=""
-                            />
-                          </div>
-                          <div class="thumb-content">
-                            <h4>Dubai</h4>
-                            <p>
-                              Convallis eget pretium eu, bibendum non leo. Proin
-                              susc ipit purus adipiscing dolor.
                             </p>
                             <a href="#" class="btn btn-primary"
                               >More <i class="fa fa-angle-right"></i
@@ -226,7 +205,7 @@
                   data-slide="prev"
                 >
                   <img
-                    src="/images/logos/left-chevron.png"
+                    src="images/logos/left-chevron.png"
                     style="width: 50px; margin-right: 70px"
                   />
                 </a>
@@ -236,7 +215,7 @@
                   data-slide="next"
                 >
                   <img
-                    src="/images/logos/chevron.png"
+                    src="images/logos/chevron.png"
                     style="width: 50px; margin-left: 70px"
                   />
                 </a>
@@ -248,7 +227,7 @@
 
       <!-- BANNER -->
       <div class="container__banner">
-        <img src="/images/Clarifying.png" class="img-fluid" alt="banner" />
+        <img src="images/Clarifying.png" class="img-fluid" alt="banner" />
       </div>
 
       <!-- FOOTER -->
@@ -262,7 +241,7 @@
           class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"
         >
           <img
-            src="/images/logos/mak-logo.png"
+            src="images/logos/mak-logo.png"
             alt="logo"
             style="width: 200px"
           />
