--- a/products.html
+++ b/products.html
@@ -27,13 +27,13 @@
       <div class="nav-container">
         <nav>
           <a class="logo" id="mobile-menu" href="#">
-            <img src="/images/logos/mak-logo.png" alt="logo" />
+            <img src="images/logos/mak-logo.png" alt="logo" />
           </a>
           <a class="cart" href="#">
-            <img src="/images/logos/shopping-bag.png" alt="cart" />
+            <img src="images/logos/shopping-bag.png" alt="cart" />
           </a>
           <a class="menu" href="#">
-            <img src="/images/logos/menu.png" alt="menu" />
+            <img src="images/logos/menu.png" alt="menu" />
           </a>
           <ul class="nav-menu">
             <li>
@@ -108,7 +108,7 @@
             data-slide="prev"
           >
             <img
-              src="/images/logos/left-chevron.png"
+              src="images/logos/left-chevron.png"
               style="width: 50px; margin-right: 70px"
             />
           </a>
@@ -118,7 +118,7 @@
             data-slide="next"
           >
             <img
-              src="/images/logos/chevron.png"
+              src="images/logos/chevron.png"
               style="width: 50px; margin-left: 70px"
             />
           </a>
